update(docs): 更新文档说明